--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
     <link href="style.css" rel="stylesheet" />
+    <div>
+      Function. 
+      Function()
+    </div>
   </head>
   <body>
     <script src="script.js"></script>
