--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
     <link href="style.css" rel="stylesheet" />
     <div>
       Function. 
-      Function()
+      Function(arg)
+      Function(arg1,arg2)
+      Function(Function)
+      For()
+      var list = [1,2,3,4]
+      CSS 
     </div>
   </head>
   <body>
