--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
       Function(Function)
       For()
       var list = [1,2,3,4]
-      CSS 
+      CSS stuff
     </div>
+    <input type=button id="button">
   </head>
   <body>
     <script src="script.js"></script>
