--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       CSS stuff
     </div>
     <input type=button id="button">
+    <div id="cssthings">
+      CLICK THIS BUTTON TO DO THINGS :)
+    </div>
   </head>
   <body>
     <script src="script.js"></script>
