--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       CSS stuff
     </div>
     <input type=button id="button">
-    <div id="cssthings">
+    <div id="help">
       CLICK THIS BUTTON TO DO THINGS :)
     </div>
   </head>
