--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     <input type=button id="button">
     <div id="help">
-      CLICK THIS BUTTON TO DO THINGS :)
+      CLICK THIS BUTTON TO DO THINGS 
     </div>
   </head>
   <body>
