--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="style.css" rel="stylesheet" />
+    <link href="somemorethings.css" rel="stylesheet" />
     <div>
       Function. 
       Function(arg)
@@ -16,6 +16,7 @@
     </div>
   </head>
   <body>
+    
     <script src="script.js"></script>
   </body>
 </html>
